# rivas

./: Cargo.toml  README.md
.github/workflows/: release.yml
examples/: all-rendering-cases.md
src/: debug.rs  file_watcher.rs  lib.rs  lib_file_cache.rs  main.rs  theme.rs  viewer.rs
src/assets/: asset_cache.rs  cache.rs  images.rs  math.rs  mermaid.rs  mod.rs  svg.rs
src/components/: blocks_renderer.rs  code_block.rs  document.rs  editor.rs  heading.rs  help_overlay.rs  html_block.rs  image.rs  inline_renderer.rs  line_renderer.rs  list_block.rs  math_block.rs  mermaid_block.rs  mod.rs  paragraph.rs  quote_block.rs  table_block.rs  thematic_break.rs
src/document/: cache.rs  mod.rs  model.rs  parser.rs
src/editor/: action.rs  buffer.rs  mod.rs  position.rs  state.rs
src/output/: capabilities.rs  graphics_manager.rs  kitty.rs  mod.rs
src/protocol/: mod.rs  socket.rs  types.rs
src/render/: code.rs  layout.rs  mod.rs  paint.rs  table.rs  text.rs  theme.rs
tests/: cli_integration.rs
