[package]
name = "rivas"
version = "0.1.0"
edition = "2024"

[lib]
name = "rivas"
path = "src/lib.rs"

[[bin]]
name = "rivas"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
base64 = "0.22.1"
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
env_logger = "0.11.10"
libc = "0.2.185"
log = "0.4.29"
pulldown-cmark = "0.13.3"
ratatui = "0.30.0"
syntect = "5.3.0"
tiny-skia = "0.12.0"
