[package]
name = "rivas"
version = "0.2.5"
edition = "2024"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev.package."*"]
opt-level = 3

[lib]
name = "rivas"
path = "src/lib.rs"

[[bin]]
name = "rivas"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
base64 = "0.22.1"
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
env_logger = "0.11.10"
libc = "0.2.185"
log = "0.4.29"
lazy_static = "1.4.0"
pulldown-cmark = "0.13.3"
syntect = "5.3.0"
tiny-skia = "0.12.0"
image = { version = "0.25", default-features = false, features = [
  "png",
  "jpeg",
  "gif",
  "webp",
] }
resvg = "0.47.0"
typst = "0.14.2"
typst-assets = { version = "0.14.2", features = ["fonts"] }
typst-svg = "0.14.2"
regex = "1.12.3"
tylax = "0.3.5"
iocraft = "0.8.2"
skim = "4.7.0"
smol = "2.0.2"
selkie-rs = "0.3.0"
unicode-width = "0.2.2"
arboard = "3.6.1"
